# ast-revamp

./: .gitignore  README.md  ast-conda-env.yml  environment.yml  processing.py  pyproject.toml  requirements.txt
ast-env/: pyvenv.cfg
ast-env/Scripts/: activate  activate.bat  vba_extract.py
config/: __init__.py
modules/: fc_to_html.py  inactive_dispositions.py  overlap_tool.py  spreadsheet_to_json.py  tantalis_bigQuery.py
prelim/: AST_outline.py
test/: test_ast_run.py
