[project]
name = "ast-revamp"
version = "0.1.0"
description = "A successor to the Automated Status Tool"
authors = [
    {name = "isaac1345",email = "isaac1345@gmail.com"}
]
license = {text = "Apache 2.0"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "backports-tarfile (==1.2.0)",
    "branca (==0.8.0)",
    "certifi (==2024.8.30)",
    "charset-normalizer (==3.4.0)",
    "contourpy (==1.3.0)",
    "cycler (==0.12.1)",
    "et-xmlfile (==2.0.0)",
    "folium (==0.18.0)",
    "fonttools (==4.55.1)",
    "geopandas (==1.0.1)",
    "idna (==3.10)",
    "importlib-metadata (==8.5.0)",
    "importlib-resources (==6.4.5)",
    "jaraco-classes (==3.4.0)",
    "jaraco-context (==6.0.1)",
    "jaraco-functools (==4.1.0)",
    "jinja2 (==3.1.4)",
    "joblib (==1.4.2)",
    "keyring (==25.5.0)",
    "kiwisolver (==1.4.7)",
    "mapclassify (==2.8.1)",
    "markupsafe (==3.0.2)",
    "matplotlib (==3.9.3)",
    "more-itertools (==10.5.0)",
    "networkx (==3.2.1)",
    "numpy (==2.1.3)",
    "openpyxl (==3.1.5)",
    "packaging (==24.2)",
    "pandas (==2.2.3)",
    "pillow (==11.0.0)",
    "pyogrio (==0.10.0)",
    "pyparsing (==3.2.0)",
    "pyproj (==3.6.1)",
    "python-dateutil (==2.9.0.post0)",
    "pytz (==2024.2)",
    "pywin32-ctypes (==0.2.3)",
    "requests (==2.32.3)",
    "scikit-learn (==1.5.2)",
    "scipy (==1.13.1)",
    "shapely (==2.0.6)",
    "six (==1.17.0)",
    "threadpoolctl (==3.5.0)",
    "tzdata (==2024.2)",
    "urllib3 (==2.2.3)",
    "xlsxwriter (==3.2.0)",
    "xyzservices (==2024.9.0)",
    "zipp (==3.21.0)",
    "oracledb (>=2.5.1,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
